terraform/modules/firewall/main.tf
resource "aws_security_group" "pulsefort" {

  name        = "pulsefort-sg"
  description = "PulseFort Security Group"

  vpc_id = var.vpc_id

  ingress {
    description = "SSH"

    from_port = 22
    to_port   = 22

    protocol = "tcp"

    cidr_blocks = [
      var.allowed_ssh_cidr
    ]
  }

  ingress {
    description = "HTTP"

    from_port = 80
    to_port   = 80

    protocol = "tcp"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }

  ingress {
    description = "HTTPS"

    from_port = 443
    to_port   = 443

    protocol = "tcp"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }

  egress {

    from_port = 0
    to_port   = 0

    protocol = "-1"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }

  tags = {
    Name        = "pulsefort-sg"
    Project     = "PulseFort"
    Environment = "prod"
    ManagedBy   = "Terraform"
  }
}
